# AdventOfCode

./: .gitignore  Cargo.toml
.run/: Test.run.xml  day_1_2023.run.xml  day_2_2023.run.xml  day_3_2023.run.xml  day_4_2023.run.xml  day_5_2023.run.xml
2022/csharp/Day1/: Program.cs
2022/csharp/Day2/: Dictionaries.cs  Program.cs
2022/csharp/Day3/: Classes.cs  Program.cs
2022/csharp/Day4/: Program.cs
2022/csharp/Day5/: Day5.csproj
2022/csharp/Day7/: Classes.cs  Enums.cs  Program.cs
2022/csharp/Day8/: Forest.cs  Program.cs
2022/rust/common/: Cargo.toml
2022/rust/day1/: Cargo.toml
2022/rust/day2/: Cargo.toml
2022/rust/day3/: Cargo.toml
2022/rust/day8/: Cargo.toml
2022/rust/day9/: Cargo.toml
2023/csharp/: AdventOfCode_2023.sln
2023/csharp/Common/: Common.csproj  Helpers.cs
2023/rust/common/: Cargo.toml
2023/rust/day1/: Cargo.toml
2023/rust/day2/: Cargo.toml
2023/rust/day3/: Cargo.toml
2023/rust/day4/: Cargo.toml
2023/rust/day5/: Cargo.toml
csharp/: AdventOfCode.sln
csharp/Common/: StackQueue.cs
csharp/Day1/: Program.cs
csharp/Day2/: Day2.csproj  Enums.cs  Program.cs
csharp/Day3/: Logic.cs  Program.cs
csharp/Day4/: Program.cs
csharp/Day5/: Classes.cs  Program.cs  RegEx.cs
csharp/Day6/: Program.cs
csharp/Day7/: Day7.csproj  Program.cs
csharp/Day8/: Classes.cs  Program.cs  Tree.cs
rust/: Cargo.toml
rust/.run/: Day1.run.xml  Day2.run.xml  Day3.run.xml  Day8.run.xml  Day9.run.xml
rust/day1/: Cargo.toml
rust/day2/: Cargo.toml
rust/day3/: Cargo.toml
rust/day8/: Cargo.toml
rust/day9/: Cargo.toml
(+67 files in other folders)
