[workspace]
resolver = "2"
members = [
    "2022/rust/common",
    "2022/rust/day1",
    "2022/rust/day2",
    "2022/rust/day3",
    "2022/rust/day8",
    "2023/rust/common",
    "2023/rust/day1",
    "2023/rust/day2",
    "2023/rust/day3",
    "2023/rust/day4",
    "2023/rust/day5",
]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[profile.test]
opt-level = 3
